--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1,4 +1,4 @@
 {
   "header" : "OpenFisca makes law computable. It is a free and open-source computation engine that allows modelling tax and benefit systems in a collaborative and transparent way. This software is used by researchers and public agencies.",
-  "stats" : "\n{nbv, number} variables and {nbp, number} parameters referenced to modelize the french tax and benefit system."
+  "stats" : "{nbv, number} variables and {nbp, number} parameters referenced to modelize the french tax-benefit system."
 }
