--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -1,4 +1,22 @@
 {
   "header" : "OpenFisca rend le droit calculable. Il s’agit d’un moteur de calcul libre et ouvert qui permet de modéliser le système socio-fiscal de manière collaborative et transparente. Ce logiciel est utilisé par des chercheurs en économie et des services publics.",
-  "stats" : "{variablesCount, number} variables et {parametersCount, number} paramètres référencés pour modéliser le système socio-fiscal français."
+  "stats" : "{variablesCount, number} variables et {parametersCount, number} paramètres référencés pour modéliser le système socio-fiscal français.",
+  "entityParagraph" : "Cette {variableLink} s'applique aux {entityLink}",
+  "variableText":"variable ",
+  "entityText":"entités ",
+  "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
+  "definitionPeriodText":"période de définition ",
+  "valueTypeParagraph":"Sa valeur est",
+  "defaultValueParagraph":"Sa {defaultValueLink}  est ",
+  "defaultValueText":"valeur par défaut",
+  "referencesText":"Références",
+  "aYear":"d'un an",
+  "aMonth":"d'un mois",
+  "forEternity":"qui est l'éternité. Sa valeur est fixe dans le temps",
+  "anInteger":"un entier",
+  "aFloat":"un nombre décimal",
+  "aDate":"une date",
+  "formula":"Formule",
+  "noFormulaParagraph":"Elle n'a pas de formule et n'est donc {formulaNotComputable}. Elle ne peut qu'être fournie en entrée lors d'un calcul.",
+  "formulaNotComputableText":"pas calculable"
 }
