--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -16,7 +16,8 @@
   "anInteger":"un entier",
   "aFloat":"un nombre décimal",
   "aDate":"une date",
-  "formula":"Formule",
+  "formulaTitle":"{formula} de calcul",
+  "formulaText":"Formule",
   "noFormulaParagraph":"Elle n'a pas de formule et n'est donc {formulaNotComputable}. Elle ne peut qu'être fournie en entrée lors d'un calcul.",
   "formulaNotComputableText":"pas calculable"
 }
