Rename the source code link to 'Modifier ces informations'

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -19,5 +19,6 @@
 	"formulaTitle":"Computation Formula",
   	"formulasTitle":"Computation Formulas",
   	"noFormulaParagraph":"It does not have a formula and therefore is {formulaNotComputable}. It can only be used as an input for a computation.",
-  	"formulaNotComputableText":"not computable"
+  	"formulaNotComputableText":"not computable",
+    "editThisVariable":"Edit this variable"
 }
