--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -20,5 +20,7 @@
   "formulasTitle":"Formules de calcul",
   "noFormulaParagraph":"Elle n'a pas de formule et n'est donc {formulaNotComputable}. Elle ne peut qu'être fournie en entrée lors d'un calcul.",
   "formulaNotComputableText":"pas calculable",
-  "editThisVariable":"Modifier ces informations"
+  "editThisVariable":"Modifier ces informations",
+  "editThisFormula":"Modifier cette formule",
+  "thisVariableJson":"Donnée brute au format JSON"
 }
