--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -16,6 +16,7 @@
   "anInteger":"an integer",
   "aFloat":"a float",
   "aDate":"a date",
+  "ofType":"of type {type}",
   "formulaTitle":"Computation Formula",
   "formulasTitle":"Computation Formulas",
   "noFormulaParagraph":"It does not have a formula and therefore is {formulaNotComputable}. It can only be used as an input for a computation.",
