--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -16,6 +16,7 @@
   "anInteger":"un entier",
   "aFloat":"un nombre décimal",
   "aDate":"une date",
+  "ofType":"de type {type}",
   "formulaTitle":"Formule de calcul",
   "formulasTitle":"Formules de calcul",
   "noFormulaParagraph":"Elle n'a pas de formule et n'est donc {formulaNotComputable}. Elle ne peut qu'être fournie en entrée lors d'un calcul.",
