--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -7,6 +7,7 @@
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText":"période de définition ",
   "valueTypeParagraph":"Sa valeur est",
+  "authorizedValues":"Les valeurs autorisées sont&nbsp;:",
   "defaultValueParagraph":"Sa {defaultValueLink}  est ",
   "defaultValueText":"valeur par défaut",
   "referencesText":"Références",
