--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -10,7 +10,7 @@
   "authorizedValues":"Les valeurs autorisées sont&nbsp;:",
   "defaultValueParagraph":"Sa {defaultValueLink}  est ",
   "defaultValueText":"valeur par défaut",
-  "referencesText":"Références",
+  "referencesText":"Références&nbsp;:",
   "aYear":"d'un an",
   "aMonth":"d'un mois",
   "forEternity":"qui est l'éternité. Sa valeur est fixe dans le temps",
