--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -27,8 +27,8 @@
   "editThisFormula":"Edit this formula",
   "thisVariableJson":"Get the JSON for this variable",
   "checkChangelog":"Check the spelling of the requested URL. If this link used to work and doesn't anymore, check the {changelogURLLink}.",
-  "notParamNotVariable":"' {inputValueRef} ' is neither a parameter nor a variable in OpenFisca.",
-  "pageDoesNotExist":"The page « /{inputValueRef} » does not exist.",
+  "notParamNotVariable":"'{inputValueRef}' is neither a parameter nor a variable in OpenFisca.",
+  "pageDoesNotExist":"The page '{inputValueRef}' does not exist.",
   "backToHP":"Back to the homepage",
   "explore":"Explore OpenFisca's parameter and variable database",
   "find":"Find"
