Make "Explorer link" part or the variables/parameters description

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1,6 +1,7 @@
 {
   "header": "OpenFisca makes law computable. It is a free and open-source computation engine that allows modelling tax and benefit systems in a collaborative and transparent way. This software is used by researchers and public agencies.{learnMoreLink}",
-  "stats": "{variablesCount, number} variables and {parametersCount, number} parameters referenced to modelize the french tax-benefit system.",
+  "stats": "{explorerLink} that modelize the french tax-benefit system.",
+  "explorerText":"Explore the {variablesCount, number} variables and {parametersCount, number} parameters",
   "entityParagraph" : "This {variableLink} applies to the {entityLink} ",
   "variableText":"variable ",
   "entityText":"entities ",
