Make "API" link part or the api description

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -2,7 +2,9 @@
   "header" : "OpenFisca rend le droit calculable. Il s’agit d’un moteur de calcul libre et ouvert qui permet de modéliser le système socio-fiscal de manière collaborative et transparente. Ce logiciel est utilisé par des chercheurs en économie et des services publics.{learnMoreLink}",
   "learnMore":"En savoir plus",
   "stats" : "{explorerLink} qui modélisent le système socio-fiscal français.",
-  "explorerText":" : {variablesCount, number} variables et {parametersCount, number} paramètres",
+  "explorerText":"Parcourir les {variablesCount, number} variables et {parametersCount, number} paramètres",
+  "api":"{apiLink} qui permet de les calculer dans n'importe quel logiciel.",
+  "apiText":"Utiliser l'API",
   "entityParagraph" : "Cette {variableLink} s'applique aux {entityLink}",
   "variableText":"variable ",
   "entityText":"entités ",
