--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -2,6 +2,8 @@
   "header": "OpenFisca makes law computable. It is a free and open-source computation engine that allows modelling tax and benefit systems in a collaborative and transparent way. This software is used by researchers and public agencies.{learnMoreLink}",
   "stats": "{explorerLink} that modelize the french tax-benefit system.",
   "explorerText":"Explore the {variablesCount, number} variables and {parametersCount, number} parameters",
+  "api":"{apiLink} that lets you compute them from any software.",
+  "apiText":"Use the API",
   "entityParagraph" : "This {variableLink} applies to the {entityLink} ",
   "variableText":"variable ",
   "entityText":"entities ",
