--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1,5 +1,6 @@
 {
-  "header": "OpenFisca makes law computable. It is a free and open-source computation engine that allows modelling tax and benefit systems in a collaborative and transparent way. This software is used by researchers and public agencies.{learnMoreLink}",
+  "header": "OpenFisca makes law computable. It is a free and open-source computation engine that allows modelling tax and benefit systems in a collaborative and transparent way. This software is used by researchers and public agencies.",
+  "learnMore":"Learn more.",
   "stats": "{explorerLink} that modelize the french tax-benefit system.",
   "explorerText":"Explore the {variablesCount, number} variables and {parametersCount, number} parameters",
   "api":"{apiLink} that lets you compute them from any software.",
@@ -34,6 +35,5 @@
   "pageDoesNotExist":"The page '{inputValueRef}' does not exist.",
   "backToHP":"Back to the homepage",
   "explore":"Explore OpenFisca's parameter and variable database",
-  "find":"Find",
-  "learnMore":"Learn more"
+  "find":"Find"
 }
