--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -17,7 +17,7 @@
   "referencesText": "References:",
   "aYear": "of a year",
   "aMonth": "of a month",
-  "forEternity": "which is the eternity. It's value is fixed over time",
+  "forEternity": "which is the eternity. Its value is constant over time",
   "anInteger": "an integer",
   "aFloat": "a float",
   "aDate": "a date",
