--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -17,7 +17,7 @@
   "referencesText": "Références&nbsp;:",
   "aYear": "d'un an",
   "aMonth": "d'un mois",
-  "forEternity": "qui est l'éternité. Sa valeur est fixe dans le temps",
+  "forEternity": "qui est l'éternité. Sa valeur est constante dans le temps",
   "anInteger": "un entier",
   "aFloat": "un nombre décimal",
   "aDate": "une date",
