Display element not found title
Remove unused “not found” page (the actual display is managed in the “home” page)

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -10,6 +10,7 @@
   "search_placeholder": "income, threshold",
 
   "appName": "Legislation explorer",
+  "elementNotFound": "Element does not exist",
 
   "entityParagraph": "This {variableLink} applies to the {entityLink}",
   "variableText": "variable",
