--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -10,6 +10,7 @@
   "search_placeholder": "salaire, impot",
 
   "appName": "Explorateur de la législation",
+  "elementNotFound": "Élément inexistant",
 
   "entityParagraph" : "Cette {variableLink} s'applique aux {entityLink}",
   "variableText": "variable",
