Localise no results text
Add user feedback on input

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -11,6 +11,7 @@
 
   "appName": "Legislation explorer",
   "elementNotFound": "Element does not exist",
+  "noResultsFor": "No element in the current model matches “{input}”.",
 
   "entityParagraph": "This {variableLink} applies to the {entityLink}",
   "variableText": "variable",
