--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -44,6 +44,7 @@
   "pageDoesNotExist": "La page '{inputValueRef}'' n'existe pas.",
   "backToHP": "Retour à l'accueil",
   "explore": "Explorez la base de paramètres et variables OpenFisca",
+  "seeOtherResults": "Voir les {otherResultsCount} autres variables et paramètres",
   "find": "Trouver",
   "keyword": "Identifiant",
   "definition":"Définition"
