Localise “improve this website” text
Replace “website” by “application”

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -45,6 +45,7 @@
   "backToHP": "Back to the homepage",
   "explore": "Explore OpenFisca's parameter and variable database",
   "seeOtherResults": "See the other {otherResultsCount} variables and parameters",
+  "improveThisApp": "Improve this application",
   "find": "Find",
   "keyword": "Keyword",
   "definition":"Definition"
