--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -45,6 +45,7 @@
   "backToHP": "Retour à l'accueil",
   "explore": "Explorez la base de paramètres et variables OpenFisca",
   "seeOtherResults": "Voir les {otherResultsCount} autres variables et paramètres",
+  "improveThisApp": "Améliorer cette application",
   "find": "Trouver",
   "keyword": "Identifiant",
   "definition":"Définition"
