Localise raw JSON data link

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -37,7 +37,6 @@
   "formulaNotComputableText": "pas calculable",
   "editThisVariable": "Modifier ces informations",
   "editThisFormula": "Modifier cette formule",
-  "thisVariableJson": "Donnée brute au format JSON",
   "checkChangelog": "Vérifiez l'orthographe de l'URL. Si ce lien fonctionnait et ne fonctionne plus, vérifiez le {changelogURLLink}.",
   "notParamNotVariable": "'{inputValueRef}' n'est ni un paramètre ni une variable d'OpenFisca.",
   "noDescription": "Aucune description",
@@ -49,5 +48,6 @@
   "find": "Trouver",
   "keyword": "Identifiant",
   "definition":"Définition",
+  "rawJSONData": "Donnée brute au format JSON",
   "loading": "Chargement…"
 }
