--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -37,7 +37,6 @@
   "formulaNotComputableText": "not computable",
   "editThisVariable": "Edit this variable",
   "editThisFormula": "Edit this formula",
-  "thisVariableJson": "Get the JSON for this variable",
   "checkChangelog": "Check the spelling of the requested URL. If this link used to work and doesn't anymore, check the {changelogURLLink}.",
   "notParamNotVariable": "'{inputValueRef}' is neither a parameter nor a variable in OpenFisca.",
   "noDescription": "No description",
@@ -49,5 +48,6 @@
   "find": "Find",
   "keyword": "Keyword",
   "definition":"Definition",
+  "rawJSONData": "Raw data in JSON format",
   "loading": "Loading…"
 }
