Refactor variable presentation
Tried to refrain from refactoring as much as possible, but it was too hard to read through the original code

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -29,7 +29,7 @@
   "definitionPeriodParagraph": "It has a {definitionPeriodLink}",
   "definitionPeriodText": "definition period",
   "valueTypeParagraph": "Its value is",
-  "authorizedValues": "The allowed values are:",
+  "allowedValues": "The allowed values are:",
   "defaultValueParagraph": "Its {defaultValueLink} is",
   "defaultValueText": "default value",
   "referencesText": "References:",
