--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -29,10 +29,10 @@
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText": "période de définition",
   "valueTypeParagraph": "Sa valeur est",
-  "authorizedValues": "Les valeurs autorisées sont&nbsp;:",
+  "allowedValues": "Les valeurs autorisées sont&nbsp;:",
   "defaultValueParagraph": "Sa {defaultValueLink} est",
   "defaultValueText": "valeur par défaut",
-  "referencesText": "Références&nbsp;:",
+  "referencesText": "Références :",
   "aYear": "d'un an",
   "aMonth": "d'un mois",
   "forEternity": "qui est l'éternité. Sa valeur est constante dans le temps",
