Display error msg when API is not reachable

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -59,5 +59,6 @@
   "keyword": "Keyword",
   "definition":"Definition",
   "rawJSONData": "Raw data in JSON format",
-  "loading": "Loading…"
+  "loading": "Loading…",
+  "api-error": "Unable to reach the OpenFisca Web API."
 }
