--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -33,6 +33,7 @@
   "defaultValueParagraph": "Sa {defaultValueLink} est",
   "defaultValueText": "valeur par défaut",
   "referencesText": "Références :",
+  "documentationText": "Documentation :",
   "aYear": "d'un an",
   "aMonth": "d'un mois",
   "forEternity": "qui est l'éternité. Sa valeur est constante dans le temps",
