Render Entity's page

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -51,6 +51,7 @@
   "checkChangelog": "Check the spelling of the requested URL. If this link used to work and doesn't anymore, check the {changelogURLLink}.",
   "notParamNotVariable": "'{inputValueRef}' is neither a parameter nor a variable in OpenFisca.",
   "noDescription": "No description",
+  "noRole": "No role",
   "pageDoesNotExist": "The page '{inputValueRef}' does not exist.",
   "backToHP": "Back to the homepage",
   "explore": "Explore OpenFisca's parameter and variable database",
