Add entity content to entity specific page

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -26,6 +26,7 @@
   "entityParagraph": "This {variableLink} applies to the {entityLink}",
   "variableText": "variable",
   "entityText": "entities",
+  "entityRoles": "Roles",
   "definitionPeriodParagraph": "It has a {definitionPeriodLink}",
   "definitionPeriodText": "definition period",
   "valueTypeParagraph": "Its value is",
@@ -51,6 +52,7 @@
   "checkChangelog": "Check the spelling of the requested URL. If this link used to work and doesn't anymore, check the {changelogURLLink}.",
   "notParamNotVariable": "'{inputValueRef}' is neither a parameter nor a variable in OpenFisca.",
   "noDescription": "No description",
+  "noPlural": "No plural",
   "noRole": "No role",
   "pageDoesNotExist": "The page '{inputValueRef}' does not exist.",
   "backToHP": "Back to the homepage",
@@ -60,6 +62,9 @@
   "find": "Find",
   "keyword": "Keyword",
   "definition":"Definition",
+  "documentation": "Documentation",
+  "plural": "Plural:",
+  "roleMaxPersons": "The maximal number of persons that could have this role is",
   "rawJSONData": "Raw data in JSON format",
   "loading": "Loading…",
   "api-error": "Unable to reach the OpenFisca Web API."
