--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -26,6 +26,7 @@
   "entityParagraph" : "Cette {variableLink} s'applique aux {entityLink}",
   "variableText": "variable",
   "entityText": "entités",
+  "entityRoles": "Rôles",
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText": "période de définition",
   "valueTypeParagraph": "Sa valeur est",
@@ -51,6 +52,7 @@
   "checkChangelog": "Vérifiez l'orthographe de l'URL. Si ce lien fonctionnait et ne fonctionne plus, vérifiez le {changelogURLLink}.",
   "notParamNotVariable": "'{inputValueRef}' n'est ni un paramètre ni une variable d'OpenFisca.",
   "noDescription": "Aucune description",
+  "noPlural": "Aucun nom pluriel",
   "noRole": "Aucun rôle",
   "pageDoesNotExist": "La page '{inputValueRef}'' n'existe pas.",
   "backToHP": "Retour à l'accueil",
@@ -60,6 +62,9 @@
   "find": "Trouver",
   "keyword": "Identifiant",
   "definition":"Définition",
+  "documentation": "Documentation",
+  "plural": "Pluriel&nbsp;:",
+  "roleMaxPersons": "Le nombre maximum de personnes pouvant occuper ce rôle est de",
   "rawJSONData": "Donnée brute au format JSON",
   "loading": "Chargement…",
   "api-error": "Impossible de communiquer avec l'API Web OpenFisca."
