Improve entity page style

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -24,9 +24,13 @@
   "overValue": "Over {startValue}",
 
   "entityParagraph": "This {variableLink} applies to the {entityLink}",
+  "entityRolesParagraph": "This {entityLink} defines the following roles:",
   "variableText": "variable",
-  "entityText": "entities",
+  "entityText": "entity",
   "entityRoles": "Roles",
+  "roleDescription": "Description",
+  "roleMaxPersons": "Maximal number of persons for this role",
+  "rolePlural": "Plural",
   "definitionPeriodParagraph": "It has a {definitionPeriodLink}",
   "definitionPeriodText": "definition period",
   "valueTypeParagraph": "Its value is",
@@ -53,7 +57,8 @@
   "notParamNotVariable": "'{inputValueRef}' is neither a parameter nor a variable in OpenFisca.",
   "noDescription": "No description",
   "noPlural": "No plural",
-  "noRole": "No role",
+  "noRole": "No defined role",
+  "noRoleMaxPersons": "Unlimited",
   "pageDoesNotExist": "The page '{inputValueRef}' does not exist.",
   "backToHP": "Back to the homepage",
   "explore": "Explore OpenFisca's parameter and variable database",
@@ -63,8 +68,6 @@
   "keyword": "Keyword",
   "definition":"Definition",
   "documentation": "Documentation",
-  "plural": "Plural:",
-  "roleMaxPersons": "The maximal number of persons that could have this role is",
   "rawJSONData": "Raw data in JSON format",
   "loading": "Loading…",
   "api-error": "Unable to reach the OpenFisca Web API."
