--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -23,10 +23,14 @@
   "betweenValues": "Entre {startValue} et {stopValue}",
   "overValue": "Plus de {startValue}",
 
-  "entityParagraph" : "Cette {variableLink} s'applique aux {entityLink}",
+  "entityParagraph" : "Cette {variableLink} s'applique à l'{entityLink}",
+  "entityRolesParagraph": "Cette {entityLink} définit les rôles suivants&nbsp;:",
   "variableText": "variable",
-  "entityText": "entités",
+  "entityText": "entité",
   "entityRoles": "Rôles",
+  "roleDescription": "Description",
+  "roleMaxPersons": "Nombre maximal de personnes pour ce rôle",
+  "rolePlural": "Pluriel",
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText": "période de définition",
   "valueTypeParagraph": "Sa valeur est",
@@ -53,7 +57,8 @@
   "notParamNotVariable": "'{inputValueRef}' n'est ni un paramètre ni une variable d'OpenFisca.",
   "noDescription": "Aucune description",
   "noPlural": "Aucun nom pluriel",
-  "noRole": "Aucun rôle",
+  "noRole": "Aucun rôle défini",
+  "noRoleMaxPersons": "Non limité",
   "pageDoesNotExist": "La page '{inputValueRef}'' n'existe pas.",
   "backToHP": "Retour à l'accueil",
   "explore": "Explorez la base de paramètres et variables OpenFisca",
@@ -63,8 +68,6 @@
   "keyword": "Identifiant",
   "definition":"Définition",
   "documentation": "Documentation",
-  "plural": "Pluriel&nbsp;:",
-  "roleMaxPersons": "Le nombre maximum de personnes pouvant occuper ce rôle est de",
   "rawJSONData": "Donnée brute au format JSON",
   "loading": "Chargement…",
   "api-error": "Impossible de communiquer avec l'API Web OpenFisca."
