--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -24,6 +24,9 @@
   "overValue": "Over {startValue}",
 
   "entityParagraph": "This {variableLink} applies to the {entityLink}",
+  "entityIntroduction": "'{entityId}' is a {entityLink} of the tax and benefit system",
+  "entitySingleType": "person entity",
+  "entityGroupType": "group entity",
   "entityRolesParagraph": "This {entityLink} defines the following roles:",
   "plural": "Plural:",
   "variableText": "variable",
