--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -24,7 +24,7 @@
   "overValue": "Plus de {startValue}",
 
   "entityParagraph" : "Cette {variableLink} s'applique à l'{entityLink}",
-  "entityIntroduction": "'{entityId}' est une {entityLink} du système socio-fiscal.",
+  "entitySingleIntroduction": "C'est une {entityLink} du système socio-fiscal.",
   "entitySingleType": "entité individuelle",
   "entityGroupType": "entité de groupe",
   "entityRolesParagraph": "Cette {entityLink} définit les rôles suivants :",
@@ -33,7 +33,7 @@
   "entityText": "entité",
   "entityRoles": "Rôles",
   "roleDescription": "Description",
-  "roleMaxPersons": "Nombre maximal de personnes pour ce rôle",
+  "roleMaxPersons": "Nombre maximal de personnes",
   "rolePlural": "Pluriel",
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText": "période de définition",
