--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -31,7 +31,7 @@
   "plural": "Plural:",
   "variableText": "variable",
   "entityText": "entity",
-  "entityRoles": "Roles",
+  "entityRoles": "Role",
   "roleDescription": "Description",
   "roleMaxPersons": "Maximal number of persons",
   "rolePlural": "Plural",
