--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -31,7 +31,7 @@
   "plural": "Pluriel :",
   "variableText": "variable",
   "entityText": "entité",
-  "entityRoles": "Rôles",
+  "entityRoles": "Rôle",
   "roleDescription": "Description",
   "roleMaxPersons": "Nombre maximal de personnes",
   "rolePlural": "Pluriel",
