--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -37,6 +37,8 @@
   "rolePlural": "Pluriel",
   "definitionPeriodParagraph": "Elle a une {definitionPeriodLink}",
   "definitionPeriodText": "période de définition",
+  "endDateParagraph": "Elle a une {endDateLink}",
+  "endDateText": "date de fin de validité fixée au",
   "valueTypeParagraph": "Sa valeur est",
   "allowedValues": "Les valeurs autorisées sont :",
   "defaultValueParagraph": "Sa {defaultValueLink} est",
